apps/web/royalafg-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: royalafg-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: royalafg-web
  template:
    metadata:
      annotations:
        "consul.hashicorp.com/connect-inject": "true"
        "consul.hashicorp.com/connect-service-upstreams": "royalafg-poker-matchmaker:59683, royalafg-auth:5000, royalafg-user:5001"
      labels:
        app: royalafg-web
        service: web
    spec:
      serviceAccountName: royalafg-web
      containers:
        - name: royalafg-web
          image: docker.io/johnnys318/royalafg_web:latest
          ports:
            - protocol: TCP
              containerPort: 3000
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 200m
              memory: 200Mi
