apps/web/royalafg-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: royalafg-web
spec:
  selector:
    app: royalafg-web
  ports:
    - name: web
      port: 8080
      targetPort: 3000
